Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntegerBoolean.quorum
class Main
    action Main
        boolean v = true
        Test(v)
    end

    action Test(integer var)
    end
end
